globals/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hysds-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #backend:
  #  serviceName: hysds-ingress-svc
  #  servicePort: 443
  rules:
  - http:
      paths:
      - path: /figaro
        backend:
          serviceName: mozart
          servicePort: 443
      - path: /search
        backend:
          serviceName: grq
          servicePort: 443
